--- a/dapps/dapplist.json
+++ b/dapps/dapplist.json
@@ -2,7 +2,7 @@
     "name": "AufWallet dapp list",
     "logoURI": "https://assets.aufwallet.com/logo.png",
     "timestamp": "2022-10-11T01:24:14.964Z",
-    "dapps": [
+    "data": [
       {
         "title": "ChainList",
         "logoURI": "https://assets.aufwallet.com/dapps/images/chainlist.png",
